--- a/env.example
+++ b/env.example
@@ -30,3 +30,7 @@ SMTP_PASS=your_app_password
 
 # Frontend API URL
 VITE_API_URL=http://localhost:4000/api
+
+# WAHA Settings (System WhatsApp API)
+WAHA_BASE_URL=https://your-waha-server.com
+WAHA_API_KEY=your_waha_api_key
