--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,9 @@ services:
       APP_URL: ${APP_URL}
       WAHA_BASE_URL: ${WAHA_BASE_URL}
       WAHA_API_KEY: ${WAHA_API_KEY}
+      SUMIT_CompanyID: ${SUMIT_CompanyID}
+      SUMIT_APIKey: ${SUMIT_APIKey}
+      SUMIT_APIPublicKey: ${SUMIT_APIPublicKey}
     ports:
       - "3749:4000"
     volumes:
