--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "axios": "^1.6.2",
     "socket.io": "^4.7.2",
     "dotenv": "^16.3.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
