feat: add VITE_SUMIT_PUBLIC_KEY to frontend env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
     restart: unless-stopped
     environment:
       VITE_API_URL: ${VITE_API_URL}
+      VITE_SUMIT_PUBLIC_KEY: ${SUMIT_APIPublicKey}
     ports:
       - "3748:5173"
     volumes:
