feat: add file upload API for large videos
- Create upload controller with multer
- Add /api/upload endpoint
- Serve uploaded files from /uploads
- Frontend now uploads large videos to server first
- Small files still use base64
- Add multer dependency
- Configure volume for uploads persistence

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       SUMIT_CompanyID: ${SUMIT_CompanyID}
       SUMIT_APIKey: ${SUMIT_APIKey}
       SUMIT_APIPublicKey: ${SUMIT_APIPublicKey}
+      API_URL: ${VITE_API_URL}
     ports:
       - "3749:4000"
     volumes:
