--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "socket.io": "^4.7.2",
     "dotenv": "^16.3.1",
     "uuid": "^9.0.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
