--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.3.1",
     "uuid": "^9.0.1",
     "node-cron": "^3.0.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "google-auth-library": "^9.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
