fix: add Google env vars to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,9 @@ services:
       SUMIT_APIKey: ${SUMIT_APIKey}
       SUMIT_APIPublicKey: ${SUMIT_APIPublicKey}
       API_URL: ${VITE_API_URL}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      FRONTEND_URL: ${APP_URL}
     ports:
       - "3749:4000"
     volumes:
