--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.6.2",
     "@xyflow/react": "^12.0.0",
     "lucide-react": "^0.294.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "@hello-pangea/dnd": "^16.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
