--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "uuid": "^9.0.1",
     "node-cron": "^3.0.3",
     "multer": "^1.4.5-lts.1",
-    "google-auth-library": "^9.4.1"
+    "google-auth-library": "^9.4.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
