fix: add Cloud API env vars to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,10 @@ services:
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
       FRONTEND_URL: ${FRONTEND_URL:-https://botomat.co.il}
+      CLOUD_API_PHONE_ID: ${CLOUD_API_PHONE_ID}
+      CLOUD_API_ACCESS_TOKEN: ${CLOUD_API_ACCESS_TOKEN}
+      CLOUD_API_VERIFY_TOKEN: ${CLOUD_API_VERIFY_TOKEN}
+      CLOUD_API_APP_SECRET: ${CLOUD_API_APP_SECRET}
     ports:
       - "3749:4000"
     volumes:
